--- a/auth/package.json
+++ b/auth/package.json
@@ -22,6 +22,8 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
+    "@yangsworld/common": "^1.0.4",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -29,7 +31,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
-    "@types/morgan": "^1.9.1",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   },
