--- a/payments/package.json
+++ b/payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orders",
+  "name": "payments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,6 +32,7 @@
     "mongoose": "^5.10.8",
     "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
+    "stripe": "^8.119.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   },
