--- a/.github/workflows/test-auth.yml
+++ b/.github/workflows/test-auth.yml
@@ -1,13 +1,13 @@
 name: test-auth
 
 on:
-  [pull_request, push]
-    
+  [pull_request, push]:
+    paths:
+      - 'auth/**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-         - uses: actions/checkout@v2
-         - run: cd auth && npm install && npm run test:ci   
-    
-  
+      - uses: actions/checkout@v2
+      - run: cd auth && npm install && npm run test:ci
