--- a/.github/workflows/test-tickets.yml
+++ b/.github/workflows/test-tickets.yml
@@ -1,12 +1,13 @@
 name: test-tickets
 
 on:
-  [pull_request, push]
-    
+  [pull_request, push]:
+    paths:
+      - 'tickets:/**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-         - uses: actions/checkout@v2
-         - run: cd tickets && npm install && npm run test:ci   
-    
+      - uses: actions/checkout@v2
+      - run: cd tickets && npm install && npm run test:ci
