--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -2,11 +2,11 @@ name: deploy-auth
 
 on:
   push:
-    branches: 
-      - master
+    branches:
+      - main
     paths:
       - 'auth/**'
-        
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +16,5 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}} 
-      - run: docker push caffeaulait/auth 
-                
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      - run: docker push caffeaulait/auth
